--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
     </properties>
 
     <dependencies>
-
-        <!-- Hibernate y JPA (Jakarta) -->
+        <!-- Hibernate y JPA -->
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -29,14 +28,14 @@
             <version>3.1.0</version>
         </dependency>
 
-        <!-- Driver JDBC para SQL Server -->
+        <!-- SQL Server JDBC Driver -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>12.6.1.jre11</version> <!-- Compatible con JDK 11+ -->
+            <version>12.6.1.jre11</version>
         </dependency>
 
-        <!-- SLF4J para logging -->
+        <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -47,10 +46,24 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.32</version>
         </dependency>
+
+        <!-- Layout NetBeans -->
         <dependency>
             <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE250</version>
+        </dependency>
+
+        <!-- 🔥 C3P0 Pool de conexiones -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>0.2.20</version>
         </dependency>
     </dependencies>
 
