--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,6 @@
             <version>RELEASE250</version>
         </dependency>
 
-        <!-- 🔥 C3P0 Pool de conexiones -->
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
@@ -64,6 +63,16 @@
             <groupId>com.mchange</groupId>
             <artifactId>mchange-commons-java</artifactId>
             <version>0.2.20</version>
+        </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdatepicker</groupId>
+            <artifactId>jdatepicker</artifactId>
+            <version>1.3.4</version>
         </dependency>
     </dependencies>
 
